# web2app

./: .gitignore  Cargo.toml  LICENSE  Makefile  Readme.md  watch.sh
src/: cli.rs  consts.rs  generated.rs  input.rs  main.rs  model.rs  template.rs  template_builder.rs  util.rs
template/: Cargo.toml  tauri.conf.json
template/src/: app_config.rs  app_data.rs  app_menu.rs  builder.rs  generated.rs  js_scripts.rs  main.rs  script.js  util.rs
